2020-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 4.2.0 RC1.

2021-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  The GameBoy's CPU core is the SM83, also used in some Sharp microcontrollers.

2021-03-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* index.php: NEWS: 4.1.0 released

2021-02-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* index.php: NEWS: 4.1.0-RC1
	* previous.php: rollover 3.8.0 release news

2020-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Change state of pic targets from "in development" in "unmaintained".

2020-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* left_menu.inc:
	  Ohloh is no more, point link to sucessor project Open Hub instead.

2020-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* left_menu.inc:
	  Add links for issue trackers and mailing lists.

2020-02-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* index.php:
	  Fix a whitespace typo.

2020-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Fix 4.0.0 release year.

2020-01-30 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 4.0.0 release.

2020-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 4.0.0 RC1.

2019-06-06 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Update pdk state.

2019-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 3.9.0 release.

2019-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 3.8.0 RC1

2018-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Note pdk14 and pdk15 support.

2018-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Add date line to 3.7.0 and 3.8.0 release news.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 3.8.0 release.

2018-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: