@@ -1,3 +1,9 @@
+2020-02-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php,
+	  previous.php:
+	  Added News - SDCC 4.2.0 RC2.
+
 2020-02-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php:
